--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -21,5 +21,5 @@
 body{
   font-family: "Manrope", sans-serif;
   font-style: normal;
-  background-color: #151C39;
+  background-color: #111729;
 }
